--- a/index.html
+++ b/index.html
@@ -143,6 +143,6 @@ p{
 	
 </body>
 <div class="footer">
-		<i >&copy; Copyright 2020 | build by <a href="https//Instagram.com/dickysetiawan195" style="color: #000;">Dicky Setiawan</a>.</i>
+		<i >&copy; Copyright 2020 | build by <a href="https://www.instagram.com/dickysetiawan195/?hl=id" style="color: #000;">Dicky Setiawan</a>.</i>
 	</div>
 </html>
