--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	font-family:taboma;
 	font-weight:bold; 
 	height: 500px;
-	width: 100%;
+	width: 105;
 	background-color: #1E90FF;
 	border-radius: 4px;
 	font-size: 18px;
