--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ p{
 		</div>
 		<div class="sidebar1">
 			<p>Pengalaman saya menjadi web developer di mulai dari saya berada di SMP  195.Waktu saya di kelas 8 atau kelas 2 smp saya ingin membuat sebuah team,tapi temen-teman saya pada tidak mengerti pemograman :( .</p>
-			<p>Tapi saya tidak berhenti di situ saja say mempelajari pemograman itu otodidak atau sendiri.</p>
+			<p>Tapi saya tidak berhenti di situ saja saya mempelajari pemograman itu otodidak atau sendiri.</p>
 			<p>Mulai dari tutorial di youtube,artikel-artikel di google maupun di majalah.</p>
 			<p>Dan Alhamdulillah saya dapat membuat web sendiri,Walaupun baru segini.Kesimpulannya Usaha tidak akan membohongi kita asal kita mau belajar.</p>
 		</div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
