--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@ img{
 
 
 		<div class="home_img">
-			<img src="assets/img/user.jpg">
+			<img src="user.jpg">
 		</div>
 	</section>
 
@@ -500,7 +500,7 @@ img{
 		<h2 class="section-title">About</h2>
 		<div class="about_container bd-grid">
 			<div class="about_img">
-				<img src="assets/img/user2.jpg">
+				<img src="user2.jpg">
 			</div>
 
 			<div>
@@ -555,7 +555,7 @@ img{
 				
 			</div>
 			<div>
-				<img src="assets/img/work.png" class="skills_img">
+				<img src="work.png" class="skills_img">
 			</div>
 		</div>
 	</section>
@@ -567,22 +567,22 @@ img{
 		<div class="galery_container bd-grid">
 			
 			<div class="galery_img">
-				<img src="assets/img/Dicky1.jpg">
+				<img src="Dicky1.jpg">
 			</div>
 			<div class="galery_img">
-				<img src="assets/img/Dicky2.jpg">
+				<img src="Dicky2.jpg">
 			</div>
 			<div class="galery_img">
-				<img src="assets/img/Dicky3.jpg">
+				<img src="Dicky3.jpg">
 			</div>
 			<div class="galery_img">
-				<img src="assets/img/Dicky4.jpg">
+				<img src="Dicky4.jpg">
 			</div>
 			<div class="galery_img">
-				<img src="assets/img/Dicky5.jpg">
+				<img src="Dicky5.jpg">
 			</div>
 			<div class="galery_img">
-				<img src="assets/img/Dicky6.jpg">
+				<img src="Dicky6.jpg">
 			</div>
 		</div>
 	</section>
@@ -593,7 +593,7 @@ img{
 		<h2 class="section-title">My Team</h2>
 		<div class="team_container bd-grid">
 			<div class="team_img">
-				<img src="assets/img/indosec.png">
+				<img src="indosec.png">
 			</div>
 
 			<div>
