--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@ img{
 
 			<div>
 				<h2 class="about_subtitle">I'am Dicky</h2>
-				<p class="about_text">Hello, my name is Dicky Ssetiawan, I was born June 25, 2004, my age is 16 years. I live in Jalan Haji mean 4 jatiwaringin, Pondok gede. I am two brothers. I am a beginner python developer. I go to school in East Jakarta Laboratory High School majoring in device sofware engenering</p>
+				<p class="about_text">Hello, my name is Dicky Setiawan, I was born June 25, 2004, my age is 16 years. I live in Jalan Haji mean 4 jatiwaringin, Pondok gede. I am two brothers. I am a beginner python developer. I go to school in East Jakarta Laboratory High School majoring in device sofware engenering</p>
 			</div>
 
 		</div>
