--- a/index.html
+++ b/index.html
@@ -363,6 +363,12 @@ img{
 	margin: 0 var(--mb-2);
 	transition: 1s;
 }
+.team_icon{
+	font-size: 2.5rem;
+	color: #fff
+	margin: 0 var(--mb-2);
+	transition: 1s;
+}
 /* media queries */
 @media screen and (min-width: 768px){
 	body{
@@ -600,6 +606,10 @@ img{
 			<div>
 				<h2 class="team_subtitle">Indosec</h2>
 				<p class="team_text">A community that focuses on technology in Indonesia, from creating, securing, to exploiting a system</p>
+				<a href="https://web.facebook.com/IndoSecOfficial?_rdc=1&_rdr" class="team_icon"><i class='bx bxl-facebook-square' ></i></i></a>
+				<a href="https://www.youtube.com/channel/UC7ifmbZznQyLFxj8AOq-kKw" class="team_icon"><i class='bx bxl-youtube'></i></i></i></a>
+				<a href="https://www.instagram.com/_indosec_/?hl=id" class="team_icon"><i class='bx bxl-instagram-alt' ></i></a>
+				<a href="https://twitter.com/infosec" class="team_icon"><i class='bx bxl-twitter' ></i></a>
 			</div>
 
 		</div>
