--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 	<title>Protofolio</title>
 	<link rel="icon"href="assets/img/Logo.png">
+	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 	<style type="text/css">
 		
 
@@ -452,7 +453,7 @@ img{
 	<link rel="icon"href="Logo.png">
 </head>
 <body>
-<!--== header == -->
+
 <header class="l-header">
 	<nav class="navbar fixed-top navbar-dark bg-dark" id="myNav">
   <a class="navbar-brand" href="#">Dicky Setiawan</a>
@@ -482,7 +483,7 @@ img{
 </header>
 
 <main class="1-main">
-	<!-- home -->
+	
 	<section class="home bd-grid" id="home">
 		<div class="home_data">
 			<h1 class="home_title">Hello, <br>I'am<span class="home_title-color">Dicky</span><br> Python Developer</h1>
@@ -502,17 +503,17 @@ img{
 	</section>
 
 
-	<!-- about me -->
+	
 	<section class="about section" id="about">
-		<h2 class="section-title">About</h2>
+		<h2 class="section-title" data-aos="fade-up">About</h2>
 		<div class="about_container bd-grid">
 			<div class="about_img">
-				<img src="user2.jpg">
+				<img src="user2.jpg" data-aos="fade-right">
 			</div>
 
 			<div>
-				<h2 class="about_subtitle">I'am Dicky</h2>
-				<p class="about_text">Hello, my name is Dicky Setiawan, I was born June 25, 2004, my age is 16 years. I live in Jalan Haji mean 4 jatiwaringin, Pondok gede. I am two brothers. I am a beginner python developer. I go to school in East Jakarta Laboratory High School majoring in device sofware engenering</p>
+				<h2 class="about_subtitle" data-aos="fade-down">I'am Dicky</h2>
+				<p class="about_text" data-aos="fade-left">Hello, my name is Dicky Setiawan, I was born June 25, 2004, my age is 16 years. I live in Jalan Haji mean 4 jatiwaringin, Pondok gede. I am two brothers. I am a beginner python developer. I go to school in East Jakarta Laboratory High School majoring in device sofware engenering</p>
 			</div>
 
 		</div>
@@ -520,12 +521,12 @@ img{
 
 	<!-- skilss-->
 	<section class="skills section" id="skills">
-		<h2 class="section-title">Skils</h2>
+		<h2 class="section-title" data-aos="fade-up">Skils</h2>
 		<div class="skills_container bd-grid">
 			<div>
-				<h2 class="skills_subtitle">Personal Skills</h2>
-				<p class="skills_text">I also have skills in several programming languages, namely Python, Php, Javascript</p>
-				<div class="skills_data">
+				<h2 class="skills_subtitle" data-aos="fade-down">Personal Skills</h2>
+				<p class="skills_text" data-aos="fade-up">I also have skills in several programming languages, namely Python, Php, Javascript</p>
+				<div class="skills_data" data-aos="fade-right">
 					<div class="skills_names">
 						<i class='bx bxl-html5 skills_icon'></i>
 						<span class="skills_name">HTML</span>
@@ -536,7 +537,7 @@ img{
 					<div class="skills_bar skills_html"></div>
 
 				</div>
-				<div class="skills_data">
+				<div class="skills_data" data-aos="fade-left">
 					<div class="skills_names">
 						<i class='bx bxl-css3 skills_icon' ></i>
 						<span class="skills_name">CSS</span>
@@ -547,7 +548,7 @@ img{
 					<div class="skills_bar skills_css"></div>
 					
 				</div>
-				<div class="skills_data">
+				<div class="skills_data" data-aos="fade-right">
 					<div class="skills_names">
 						<i class='bx bxl-javascript skills_icon' ></i>
 						<span class="skills_name">JavaScript</span>
@@ -562,62 +563,62 @@ img{
 				
 			</div>
 			<div>
-				<img src="work.png" class="skills_img">
+				<img src="work.png" class="skills_img" data-aos="fade-left">
 			</div>
 		</div>
 	</section>
 
-	<!-- Galery -->
+	
 	<section class="galery section" id="galery">
-		<h2 class="section-title">Galery</h2>
+		<h2 class="section-title" data-aos="fade-up">Galery</h2>
 
 		<div class="galery_container bd-grid">
 			
-			<div class="galery_img">
+			<div class="galery_img" data-aos="fade-down">
 				<img src="Dicky1.jpg">
 			</div>
-			<div class="galery_img">
+			<div class="galery_img" data-aos="fade-down">
 				<img src="Dicky2.jpg">
 			</div>
-			<div class="galery_img">
+			<div class="galery_img" data-aos="fade-down">
 				<img src="Dicky3.jpg">
 			</div>
-			<div class="galery_img">
+			<div class="galery_img" data-aos="fade-up">
 				<img src="Dicky4.jpg">
 			</div>
-			<div class="galery_img">
+			<div class="galery_img" data-aos="fade-up">
 				<img src="Dicky5.jpg">
 			</div>
-			<div class="galery_img">
+			<div class="galery_img" data-aos="fade-up">
 				<img src="Dicky6.jpg">
 			</div>
 		</div>
 	</section>
 
 
-	<!-- My team -->
+	
 	<section class="team section" id="team">
-		<h2 class="section-title">My Team</h2>
+		<h2 class="section-title" data-aos="fade-down">My Team</h2>
 		<div class="team_container bd-grid">
 			<div class="team_img">
-				<img src="indosec.png">
+				<img src="indosec.png" data-aos="fade-right">
 			</div>
 
 			<div>
-				<h2 class="team_subtitle">Indosec</h2>
-				<p class="team_text">A community that focuses on technology in Indonesia, from creating, securing, to exploiting a system</p>
-				<a href="https://web.facebook.com/IndoSecOfficial?_rdc=1&_rdr" class="team_icon"><i class='bx bxl-facebook-square' ></i></i></a>
-				<a href="https://www.youtube.com/channel/UC7ifmbZznQyLFxj8AOq-kKw" class="team_icon"><i class='bx bxl-youtube'></i></i></i></a>
-				<a href="https://www.instagram.com/_indosec_/?hl=id" class="team_icon"><i class='bx bxl-instagram-alt' ></i></a>
-				<a href="https://twitter.com/infosec" class="team_icon"><i class='bx bxl-twitter' ></i></a>
+				<h2 class="team_subtitle" data-aos="fade-up">Indosec</h2>
+				<p class="team_text" data-aos="fade-left">A community that focuses on technology in Indonesia, from creating, securing, to exploiting a system</p>
+				<a href="https://web.facebook.com/IndoSecOfficial?_rdc=1&_rdr" class="team_icon"><i class='bx bxl-facebook-square' data-aos="fade-up"></i></i></a>
+				<a href="https://www.youtube.com/channel/UC7ifmbZznQyLFxj8AOq-kKw" class="team_icon"><i class='bx bxl-youtube' data-aos="fade-down"></i></i></i></a>
+				<a href="https://www.instagram.com/_indosec_/?hl=id" class="team_icon"><i class='bx bxl-instagram-alt' data-aos="fade-up"></i></a>
+				<a href="https://twitter.com/infosec" class="team_icon"><i class='bx bxl-twitter' data-aos="fade-down"></i></a>
 			</div>
 
 		</div>
-		<a href="https://indosec.id/" class="button_team">Indosec</a>
+		<a href="https://indosec.id/" class="button_team" data-aos="fade-left">Indosec</a>
 	</section>
 
 </main>
-<!-- == footer == -->
+
 <footer class="footer">
 	<p class="footer_title">Dicky</p>
 
@@ -630,7 +631,13 @@ img{
 </footer>
 
 
-
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init({
+    	offset: 200,
+    	duration:1000
+    });
+</script>
 <script src="https://unpkg.com/scrollreveal"></script>
 <script type="text/javascript">
 	const sr = ScrollReveal({
@@ -643,21 +650,6 @@ sr.reveal('.home_title',{interval: 200})
 sr.reveal('.button', {interval: 400})
 sr.reveal('.home_img', {interval: 600})
 sr.reveal('.home_social-icon', {interval: 200})
-sr.reveal('.about_subtitle', {interval: 200})
-sr.reveal('.about_text', {interval: 600})
-sr.reveal('.about_img', {interval: 200})
-sr.reveal('.skills_subtitle', {interval: 200})
-sr.reveal('.skills_text', {interval: 200})
-sr.reveal('.skills_data', {interval: 200})
-sr.reveal('.skills_names', {interval: 200})
-sr.reveal('.skills_img', {interval: 200})
-sr.reveal('.galery_img', {interval: 200})
-sr.reveal('.team_subtitle', {interval: 200})
-sr.reveal('.team_text', {interval: 200})
-sr.reveal('.team_img', {interval: 200})
-sr.reveal('.button_team', {interval: 200})
-sr.reveal('.team_icon', {interval: 200})
-
 </script>
 
  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
