--- a/index.html
+++ b/index.html
@@ -574,19 +574,19 @@ img{
 
 		<div class="galery_container bd-grid">
 			
-			<div class="galery_img" data-aos="fade-down">
+			<div class="galery_img" data-aos="fade-right">
 				<img src="Dicky1.jpg">
 			</div>
-			<div class="galery_img" data-aos="fade-down">
+			<div class="galery_img" data-aos="fade-up">
 				<img src="Dicky2.jpg">
 			</div>
-			<div class="galery_img" data-aos="fade-down">
+			<div class="galery_img" data-aos="fade-left">
 				<img src="Dicky3.jpg">
 			</div>
 			<div class="galery_img" data-aos="fade-up">
 				<img src="Dicky4.jpg">
 			</div>
-			<div class="galery_img" data-aos="fade-up">
+			<div class="galery_img" data-aos="fade-down">
 				<img src="Dicky5.jpg">
 			</div>
 			<div class="galery_img" data-aos="fade-up">
