--- a/index.html
+++ b/index.html
@@ -3,28 +3,11 @@
 <head>
 	<title>Web ini sedang di hack hahaha</title>
 	<style type="text/css">
-body{background-color: #000;}.squre{margin: auto;}p{color: #006400;font-size: 1.5rem;}
+body{background-color: #fff;}
 	</style>
 </head>
 <body>
 	
-	<div class="squre">
-		<h1 style="text-align: center; margin:150px; margin-bottom: 25px; color: #8b0000;">Hacked by us3r_cy3b3r</h1>
-		<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a6/Anonymous_emblem.svg/1200px-Anonymous_emblem.svg.png" width="150" height="140" style="display:block; margin: auto;">
-		<p style="text-align: center;">
-		 	Hahaha  Loe jangan sok gaya deh
-		</p>
-		<p style="text-align: center;"> 
-			Jangan so so hacker  klo masih pemula 
-		</p>
-		<p style="text-align: center;">
-			Bisa di betulkan kembali ga dengan community lu hahaha 
-		</p>
-		<p style="text-align: center;">
-			indosec community apaan tuh njing,Kalo lu merasa community 
-		</p>
-		<p style="text-align: center;">lu paling jago ayo adu skills aja njing!!! </p>
-		<h1 style="text-align: center; "><a href="https://twitter.com/anonnewsindo" style="color: #8b0000; text-decoration:none">Contact</a></h1>
-	</div>
+	
 </body>
 </html>
